--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>Gorka Navarrete obtained his PhD in Cognitive Neuroscience in the Universidad de La Laguna (Spain). He worked as a postdoctoral fellow in the University of Hull (UK), Universidad de La Laguna (Spain) and York University (Canada). He is an Assistant professor at Universidad Adolfo Ibañez in Chile.</p>
+<p>.Gorka Navarrete obtained his PhD in Cognitive Neuroscience in the Universidad de La Laguna (Spain). He worked as a postdoctoral fellow in the University of Hull (UK), Universidad de La Laguna (Spain) and York University (Canada). He is an Assistant professor at Universidad Adolfo Ibañez in Chile.</p>
 
 <p>His main research focus is related to Bayesian reasoning, risk communication and decision making, as well as various things related to heuristics and biases and the neural basis of reasoning. He works as a part of an international network in the perception of beauty in architectural contexts.</p>
 
@@ -256,8 +256,8 @@
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Artificial Intelligence, 2012</p>
-              <p class="institution">Stanford University</p>
+              <p class="course">PhD in Cognitive Neuroscience, 2008</p>
+              <p class="institution">Universidad de La Laguna</p>
             </div>
           </li>
           
